added CheckHeaderStatus func

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "id": "9fb889ca-2b60-4328-a7ff-ad84f78e8a5b",
-  "name": "ADeepinsertBC16API",
+  "name": "DeepinsertBC16API",
   "publisher": "Default publisher",
   "version": "1.0.0.0",
   "brief": "",
